# NIPTViewer

./: .dockerignore  .env.dev  .env.dev-test  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose-development.yaml  docker-compose-development_simple.yaml  docker-compose-production-test.yaml  docker-compose-production.yaml  docker-compose.yaml  fetch_assets.sh  kube_development.yaml  kube_production.yaml  mkdocs.yml  pyproject.toml  requirements.prod.txt  requirements.txt  setup-environment.sh
.github/workflows/: docker-publish.yaml  main.yaml  release-please.yaml
data/: generate_example_data.py
docker/: docker-compose-development.yaml  docker-compose-production.yaml  env.dev  ssl-file-setup.sh
docker/dev/: .env_web  (+3 more)
dockerfiles/: development.dockerfile  dockerfile  entrypoint-dev.sh  entrypoint.sh  nginx-test.conf  nginx.conf  nginx.dev.dockerfile  nginx.prod.conf  nginx.prod.dockerfile  production.dockerfile  self-signed.conf  ssl-params.conf
docs/: _config.yml  about.md  development.md  hooks.py  index.md  index.rst  production.md  requirements.txt  server_configuration.md  test_data.md  user_configuration.md  visualisation_introduction.md  visualisation_pdf.md  visualisation_qc.md  visualisation_result.md
kubernetes/: README.md  db-deployment.yaml  db-service.yaml  kube_production.yaml  kube_production_dev.yaml  kube_production_dev_volume.yaml  kube_production_volume.yaml  nginx-deployment.yaml  nginx-service.yaml  static-files-persistentvolumeclaim.yaml  web-deployment.yaml  web-service.yaml
niptviewer/: .coveragerc  CHANGELOG.md  manage.py
(+98 files in other folders)
